gap between links fixed

--- a/app/assets/stylesheets/components/_pagination.scss
+++ b/app/assets/stylesheets/components/_pagination.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   justify-content: space-between;
   margin-top: 2rem;
+  gap: 1em;
 }
 
 .pagination-links {
